# nes-emu

./: .gitignore  Cargo.toml  README.md  build.rs  compile_flags.txt  flake.nix
inc/: cpu.h  interface.h
python/: generate_instructions.py
src/: cpu.rs  drawing.rs  evaluate_instruction.c  evaluate_instruction.rs  evaluate_instruction_1.c  evaluate_instruction_2.c  evaluate_instruction_3.c  evaluate_instruction_4.c  evaluate_instruction_5.c  inst.rs  interpret.rs  main.rs  nes_file.rs  ppu.rs  tests.rs
