[package]
name = "nes-emu"
version = "0.1.0"
edition = "2024"

[dependencies]
bitflags = "2.9"
bitfields = "1.0"
anyhow = "1.0"
derive_more = { version = "2", features = [ "into" ] }
sdl2 = { version = "0.38", features = [ "use-pkgconfig" ] }
bytemuck = { version = "1.23", features = [ "derive" ] }

[build-dependencies]
cc = "1.2"
